Creating the cluster

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,7 @@
 [kube_masters]
-192.168.30.10
+kube-master ansible_host=192.168.30.10
 
 [kube_workers]
-192.168.30.11
-192.168.30.12
-192.168.30.13
+kube-node01 ansible_host=192.168.30.11
+kube-node02 ansible_host=192.168.30.12
+kube-node03 ansible_host=192.168.30.13
