--- a/playbook.yaml
+++ b/playbook.yaml
@@ -5,3 +5,7 @@
   roles:
     - role: common_install
     - role: kube_preinstall
+    - role: master_install
+      when: "'kube_masters' in group_names"
+    - role: worker_install
+      when: "'kube_workers' in group_names"
