--- a/roles/master_install/tasks/main.yaml
+++ b/roles/master_install/tasks/main.yaml
@@ -1,4 +1,6 @@
 ---
+- include_tasks: helm.yaml
+
 - name: Create cluster
   shell: kubeadm init --pod-network-cidr=10.30.0.0/16 --skip-phases=addon/kube-proxy --cri-socket=unix:///var/run/crio/crio.sock
   register: kubeadm_output
